--- a/farumasi-frontend/.env.example
+++ b/farumasi-frontend/.env.example
@@ -1,2 +1,2 @@
 # Backend API URL - Copy this file to .env for local development
-REACT_APP_API_BASE_URL=http://localhost:5000
+REACT_APP_API_BASE_URL=https://farumasi.onrender.com
